// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating nuxt stats 3 {"format":"amd","expected":"amd"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-client-amd",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"amd","expected":"amd"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"cjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-client-cjs",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"cjs","expected":"cjs"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"es","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-client-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"es","expected":"esm"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"esm","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-client-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"esm","expected":"esm"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-client-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"module","expected":"esm"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"iife","expected":"iife"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-client-iife",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"iife","expected":"iife"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"umd","expected":"umd"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-client-umd",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"umd","expected":"umd"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"system","expected":"system"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-client-system",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"system","expected":"system"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"systemjs","expected":"system"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-client-system",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;

exports[`Generating nuxt stats 3 {"format":"systemjs","expected":"system"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-nuxt-v3-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/nuxt-plugin",
    "version": "1.1.0",
  },
  "version": "2",
}
`;
